# ImageBibAnalyser

./: .gitignore  Dockerfile  Dockerfile.train  README.md  TRANSCRIPT.md  cursor_tasks.md  docker_inference_example.md  pyproject.toml  requirements.txt  setup_venv.ps1  setup_venv.sh
.cursor/: rules.md
.github/workflows/: build-train.yml  ci.yml
docs/: installation.md  troubleshooting.md  usage.md  yolo_training.md
prompts/: overview.md  specs.md
scripts/: benchmark.py  bib_finder.py  bib_finder_gpu.py  bib_query.py  bib_storage.py  bib_train.py  bib_yolo.py  cli.py  gallery_downloader.py  generate_report.py  prepare_yolo_dataset.py  train_yolo.py
tests/: test_bib_storage.py  test_gallery_downloader.py
